--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>FP Sellection</title>
 </head>
+
 <body>
     <header>
         <img src="./img/logo.png" alt="logo fp">
@@ -25,7 +37,7 @@
                     <img src="./img/1.png" alt="Ferrari">
                 </div>
             </div>
-            
+
             <div class="content">
                 <p class="car-info">
                     Unico Dono
@@ -34,7 +46,9 @@
                     Ferrari
                 </h2>
                 <p class="description">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente explicabo deleniti debitis sed error eveniet nemo autem quos quasi voluptatibus? Corrupti vero quidem asperiores quam, minus exercitationem amet dolorum saepe.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente explicabo deleniti debitis sed
+                    error eveniet nemo autem quos quasi voluptatibus? Corrupti vero quidem asperiores quam, minus
+                    exercitationem amet dolorum saepe.
                 </p>
                 <button class="infos">
                     Saiba Mais
@@ -42,18 +56,19 @@
             </div>
         </div>
         <!-- botoes -->
-         <div class="arrows">
+        <div class="arrows">
             <button><img src="./img/arrow.png" alt="seta esquerda"></button>
             <button><img src="./img/arrow.png" alt="seta direita"></button>
-         </div>
-         <div class="indicators">
+        </div>
+        <div class="indicators">
             <div class="number">01</div>
             <ul>
                 <li class="active"></li>
                 <li></li>
                 <li></li>
             </ul>
-         </div>
+        </div>
     </section>
 </body>
+
 </html>
