--- a/index.html
+++ b/index.html
@@ -32,27 +32,73 @@
     <!-- Carrosel -->
     <section>
         <div class="list">
-            <div class="item">
+            <div class="item active">
                 <div class="car-img">
                     <img src="./img/1.png" alt="Ferrari">
                 </div>
+                <div class="content">
+                    <p class="car-info">
+                        Unico Dono
+                    </p>
+                    <h2>
+                        911 Turbo
+                    </h2>
+                    <p class="description">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente explicabo deleniti debitis
+                        sed
+                        error eveniet nemo autem quos quasi voluptatibus? Corrupti vero quidem asperiores quam, minus
+                        exercitationem amet dolorum saepe.
+                    </p>
+                    <button class="infos">
+                        Saiba Mais
+                    </button>
+                </div>
             </div>
-
-            <div class="content">
-                <p class="car-info">
-                    Unico Dono
-                </p>
-                <h2>
-                    Ferrari
-                </h2>
-                <p class="description">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente explicabo deleniti debitis sed
-                    error eveniet nemo autem quos quasi voluptatibus? Corrupti vero quidem asperiores quam, minus
-                    exercitationem amet dolorum saepe.
-                </p>
-                <button class="infos">
-                    Saiba Mais
-                </button>
+            <!-- Carro 2 -->
+            <div class="item">
+                <div class="car-img">
+                    <img src="./img/2.png" alt="Ferrari">
+                </div>
+                <div class="content">
+                    <p class="car-info">
+                        Conversível
+                    </p>
+                    <h2>
+                        Ferrari
+                    </h2>
+                    <p class="description">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente explicabo deleniti debitis
+                        sed
+                        error eveniet nemo autem quos quasi voluptatibus? Corrupti vero quidem asperiores quam, minus
+                        exercitationem amet dolorum saepe.
+                    </p>
+                    <button class="infos">
+                        Saiba Mais
+                    </button>
+                </div>
+            </div>
+            <!-- Carro 3 -->
+            <div class="item">
+                <div class="car-img">
+                    <img src="./img/3.png" alt="Ferrari">
+                </div>
+                <div class="content">
+                    <p class="car-info">
+                        2015
+                    </p>
+                    <h2>
+                        Lamborghini
+                    </h2>
+                    <p class="description">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente explicabo deleniti debitis
+                        sed
+                        error eveniet nemo autem quos quasi voluptatibus? Corrupti vero quidem asperiores quam, minus
+                        exercitationem amet dolorum saepe.
+                    </p>
+                    <button class="infos">
+                        Saiba Mais
+                    </button>
+                </div>
             </div>
         </div>
         <!-- botoes -->
