--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <!-- Carrosel -->
-    <section>
+    <section class="container">
         <div class="list">
             <div class="item active">
                 <div class="car-img">
@@ -103,8 +103,8 @@
         </div>
         <!-- botoes -->
         <div class="arrows">
-            <button><img src="./img/arrow.png" alt="seta esquerda"></button>
-            <button><img src="./img/arrow.png" alt="seta direita"></button>
+            <button id="prev"><img src="./img/arrow.png" alt="seta esquerda"></button>
+            <button id="next"><img src="./img/arrow.png" alt="seta direita"></button>
         </div>
         <div class="indicators">
             <div class="number">01</div>
@@ -115,6 +115,8 @@
             </ul>
         </div>
     </section>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
